// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox demo -- checkbox 1`] = `
.c26 {
  margin-right: 8px;
  font-size: 14px;
}

.edcfRj .c25 {
  color: #526075;
}

.c24 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c24 .c25 {
  color: #4074e1;
}

.msYAM .c25 {
  color: #d9d9d9;
}

.eidQRq .c25 {
  color: #526075;
}

.fKczJh .c25 {
  color: #526075;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c23 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c19 {
  width: 20px;
  height: 20px;
}

.c23 .c21 {
  left: 13px;
  height: 10px;
}

.c23 .c15,
.c23 .c17 {
  line-height: 16px;
}

.c23 .c15 {
  padding-right: 20px;
}

.c23 .c17 {
  padding-left: 20px;
}

.c23 .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c23 .c19 {
  left: 49px;
}

.c23 .c21 {
  background: #9fecc0;
}

.c23 .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c23"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c24"
    >
      <i
        class="icon__checkbox-ed c25 c26 "
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-checked 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #526075;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c1 {
  color: #4074e1;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 c2 "
      />
      unchecked
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c3"
    >
      <i
        class="icon__checkbox-ed c1 c2 "
      />
      checked
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-disabled 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #526075;
}

.lnjPzf .c1 {
  color: #4074e1;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 .c1 {
  color: #d9d9d9;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 c2 "
      />
      common
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
      disabled=""
    >
      <i
        class="icon__checkbox c1 c2 "
        disabled=""
      />
      disabled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-size 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c3 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c3 .c1 {
  color: #526075;
}

.lnjPzf .c1 {
  color: #4074e1;
}

.msYAM .c1 {
  color: #d9d9d9;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #526075;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
  color: #6b798e;
}

.c4 .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 c2 "
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
    >
      <i
        class="icon__checkbox c1 c2 "
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c4"
    >
      <i
        class="icon__checkbox c1 c2 "
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-uncontrolled 1`] = `
.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.edcfRj .c1 {
  color: #526075;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #4074e1;
}

.msYAM .c1 {
  color: #d9d9d9;
}

.eidQRq .c1 {
  color: #526075;
}

.fKczJh .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0"
    >
      <i
        class="icon__checkbox-ed c1 c2 "
      />
      controlled
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="c0"
    >
      <i
        class="icon__checkbox-ed c1 c2 "
      />
      uncontrolled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- group 1`] = `
.c27 {
  margin-right: 8px;
  font-size: 14px;
}

.c25 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c25 .c26 {
  color: #526075;
}

.lnjPzf .c26 {
  color: #4074e1;
}

.msYAM .c26 {
  color: #d9d9d9;
}

.eidQRq .c26 {
  color: #526075;
}

.fKczJh .c26 {
  color: #526075;
}

.c23 .c24 {
  margin-right: 8px;
}

.c23 .c24:last-child {
  margin-right: 0;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.gUQuWo .c19 {
  width: 20px;
  height: 20px;
}

.gUQuWo .c21 {
  left: 13px;
  height: 10px;
}

.gUQuWo .c15,
.gUQuWo .c17 {
  line-height: 16px;
}

.gUQuWo .c15 {
  padding-right: 20px;
}

.gUQuWo .c17 {
  padding-left: 20px;
}

.gUQuWo .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.gUQuWo .c19 {
  left: 49px;
}

.gUQuWo .c21 {
  background: #9fecc0;
}

.gUQuWo .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c23"
        >
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 c27 "
            />
            1
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 c27 "
            />
            2
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 c27 "
            />
            3
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 c27 "
            />
            4
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c23"
    >
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 c27 "
        />
        1
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 c27 "
        />
        2
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 c27 "
        />
        3
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 c27 "
        />
        4
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-disabled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c2 .c3 {
  color: #526075;
}

.lnjPzf .c3 {
  color: #4074e1;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c5 .c3 {
  color: #d9d9d9;
}

.eidQRq .c3 {
  color: #526075;
}

.fKczJh .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__checkbox c3 c4 "
          disabled=""
        />
        1
      </span>
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__checkbox c3 c4 "
          disabled=""
        />
        2
      </span>
      <span
        class="c1 c5"
        disabled=""
      >
        <i
          class="icon__checkbox c3 c4 "
          disabled=""
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-options 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c2 .c3 {
  color: #526075;
}

.lnjPzf .c3 {
  color: #4074e1;
}

.msYAM .c3 {
  color: #d9d9d9;
}

.eidQRq .c3 {
  color: #526075;
}

.fKczJh .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        option-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        option-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        option-3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        checkbox-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        checkbox-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        checkbox-3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-size 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c5 .c3 {
  color: #526075;
}

.lnjPzf .c3 {
  color: #4074e1;
}

.msYAM .c3 {
  color: #d9d9d9;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
  color: #6b798e;
}

.c2 .c3 {
  color: #526075;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
  color: #6b798e;
}

.c6 .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        1
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        2
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c6"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        1
      </span>
      <span
        class="c1 c6"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        2
      </span>
      <span
        class="c1 c6"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-uncontrolled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c2 .c3 {
  color: #526075;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #6b798e;
}

.c5 .c3 {
  color: #4074e1;
}

.msYAM .c3 {
  color: #d9d9d9;
}

.eidQRq .c3 {
  color: #526075;
}

.fKczJh .c3 {
  color: #526075;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        1
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__checkbox-ed c3 c4 "
        />
        2
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__checkbox-ed c3 c4 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__checkbox-ed c3 c4 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 c4 "
        />
        2
      </span>
      <span
        checked=""
        class="c1 c5"
      >
        <i
          class="icon__checkbox-ed c3 c4 "
        />
        3
      </span>
    </div>
  </div>
</div>
`;
